add users modul

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31219,6 +31219,18 @@ a.text-muted:hover {
   color: #ffffff;
 }@charset "UTF-8";
 
+.blue {
+  color: #3490dc;
+}
+
+.indigo {
+  color: #6574cd;
+}
+
+.green {
+  color: #38c172;
+}
+
 /*!
  * Bootstrap v4.5.2 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
